<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".SubmissionDialog">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="70dp"
            android:text="@string/are_you_sure"
            style="@style/TextAppearance.MaterialComponents.Headline5"
            android:textAlignment="center"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/negative_button"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/negative_button" />

        <Button
            android:id="@+id/positive_button"
            android:layout_width="99dp"
            android:layout_height="45dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/positive_btn_background"
            android:text="@string/yes"
            android:textAllCaps="false"
            android:textColor="@color/my_yellow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/textView4"
            app:layout_constraintHorizontal_bias="0.519"
            app:layout_constraintStart_toStartOf="@+id/textView4"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/negative_button"
            android:layout_width="76dp"
            android:layout_height="53dp"
            android:layout_marginTop="100dp"
            android:layout_marginEnd="16dp"
            android:background="@color/colorAccent"
            android:clickable="true"
            android:contentDescription="@string/cancel"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.989"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/close_icon"
            app:tint="@color/colorPrimary" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>